# MultimediaTools-mingw-w64

./: 0000-build-fix.patch  0001-dwmapi.def-Regenegerate-from-Windows-10.patch  0001-mingw32-does-not-need-handholding.all.patch  0002-no-undefined-on.mingw.patch  0003-binary-stdin.all.patch  0004-no-need-for-dllexport.mingw.patch  0005-silent.mingw.patch  001-missing-rc-mingw.patch  006-commit.patch  1394Camera.h  1394CameraControl.h  1394CameraControlSize.h  1394camapi.h  1394camera.def  1394camera.lib  AviSynthPlus-inlines.patch  DJV2.patch  DJVnew.patch  DeckLinkAPI.h  DeckLinkAPI_i.c  EbmlElement.h.patch  FFmpeg-devel-avfilter-add-3D-scope-multimedia-filter.diff  FindOTIO.cmake  LICENSE  LICENSE.rtf  OLDlibsub-wscript.patch  OpenBLAS-makefile.patch  OpenCL.def  OpenColorIO.patch  PAmix-mutex.patch  README.md  SDL-declaration-after-statement.patch  SDL2-prevent-duplicate-d3d11-declarations.patch  SDL2-prevent-duplicate-scalbln.patch  SDL2-stdint.patch  SPIRV-Tools-shared.patch  Vulkan-Loader-pc-for-qt-fix.patch  ZenLib-pkgconfig.patch  ZenLib-shared.patch  ZlibResult.cmake  (+503 more)
1394camera646-unsigned/: 1394Camera.dsw  1394Camera.nsi  Doxyfile  cmudc1394.cdf
1394camera646-unsigned/1394CameraDemo/: 1394CameraDemo.cpp  1394CameraDemo.dsp  1394CameraDemo.dsw  1394CameraDemo.exe.manifest  1394CameraDemo.rc  1394CameraDemoDev.dsp  1394CameraDemoDev.vcproj  1394camerademo.h  ChildView.cpp  ChildView.h  GetIntegerDialog.cpp  GetIntegerDialog.h  MainFrm.cpp  MainFrm.h  StdAfx.cpp  StdAfx.h  (+3 more)
bzip2-1.0.6/: Makefile.in  README.CYGMING  aclocal.m4  configure.ac  libbz2.def.in
(+78 files in other folders)
